<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lytMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "#808080"
    android:screenOrientation="portrait"
    tools:context="com.techsofts.screencolors.MainActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <CheckBox
                android:id = "@+id/chkbSound"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/enableSound"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:buttonTint="@color/colorPrimary"
               />

        <Button
            android:id = "@+id/btnBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/black"
            android:background = "@android:color/transparent"
            android:textColor= "#000000"
            android:paddingBottom = "10dp"
            android:textSize = "20dp"
            android:layout_below = "@+id/chkbSound"
            android:layout_alignParentLeft="false" />

        <Button
            android:id = "@+id/btnBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/blue"
            android:background = "@android:color/transparent"
            android:textColor= "#0000ff"
            android:layout_below = "@+id/btnBlack"
            android:paddingBottom = "20dp"
            android:textSize = "20dp"
            />
        <Button
            android:id = "@+id/btnRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/red"
            android:layout_below = "@+id/btnBlue"
            android:background = "@android:color/transparent"
            android:textColor = "#FF0000"
            android:paddingBottom = "10dp"
            android:textSize = "20dp"
            />
        <Button
            android:id = "@+id/btnYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/yellow"
            android:layout_below = "@+id/btnRed"
            android:background = "@android:color/transparent"
            android:textColor = "#ffff00"
            android:paddingBottom = "10dp"
            android:textSize = "20dp"
            />
        <Button
            android:id = "@+id/btnOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/orange"
            android:layout_below = "@+id/btnYellow"
            android:background = "@android:color/transparent"
            android:textColor = "#FFA500"
            android:paddingBottom = "10dp"
            android:textSize = "20dp"
            />
        <Button
            android:id = "@+id/btnPurple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/purple"
            android:layout_below = "@+id/btnOrange"
            android:background = "@android:color/transparent"
            android:textColor = "#800080"
            android:paddingBottom = "10dp"
            android:textSize = "20dp"
            />
        <Button
            android:id = "@+id/btnGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/green"
            android:layout_below = "@+id/btnPurple"
            android:background = "@android:color/transparent"
            android:textColor = "#00FF00"
            android:paddingBottom = "10dp"
            android:textSize = "20dp"
            />
        <Button
            android:id = "@+id/btnWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/white"
            android:layout_below = "@+id/btnGreen"
            android:background = "@android:color/transparent"
            android:textColor = "#FFFFFF"
            android:paddingBottom = "20dp"
            android:textSize = "20dp"
            />
       </RelativeLayout>

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>